Revised with modalservice

--- a/UIRouterSample_3/UIRouterSample_3/UIRouterSample_3.csproj
+++ b/UIRouterSample_3/UIRouterSample_3/UIRouterSample_3.csproj
@@ -94,11 +94,19 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\contacts\contacts.list2.html" />
+    <Content Include="app\partials\modal.html" />
+    <Content Include="app\services\modalService.js" />
+    <Content Include="Content\ui-bootstrap-csp.css" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="assets\contacts.json" />
+    <Content Include="scripts\angular-ui\ui-bootstrap-tpls.js" />
+    <Content Include="scripts\angular-ui\ui-bootstrap-tpls.min.js" />
+    <Content Include="scripts\angular-ui\ui-bootstrap.js" />
+    <Content Include="scripts\angular-ui\ui-bootstrap.min.js" />
     <Content Include="scripts\angular.min.js.map" />
     <Content Include="scripts\angular-animate.min.js.map" />
     <None Include="Web.Debug.config">
