--- a/UIRouter_Extras/UIRouter_Extras/packages.config
+++ b/UIRouter_Extras/UIRouter_Extras/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.Bootstrap" version="1.2.5" targetFramework="net452" />
+  <package id="AngularJS.Animate" version="1.5.3" targetFramework="net452" />
+  <package id="AngularJS.Core" version="1.5.3" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.6" targetFramework="net452" />
+  <package id="jQuery" version="1.9.1" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
 </packages>
