--- a/UIRouter_Extras/UIRouter_Extras/UIRouter_Extras.csproj
+++ b/UIRouter_Extras/UIRouter_Extras/UIRouter_Extras.csproj
@@ -66,7 +66,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\pages\myModalContent.html" />
+    <Content Include="app\services\dataService.js" />
     <Content Include="app\services\modalService.js" />
+    <Content Include="app\services\utils-service.js" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -91,6 +94,7 @@
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\angular-animate.min.js.map" />
+    <Content Include="app\assets\data.json" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
